--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,7 @@
 static:
+  buildCommand: yarn build # or npm run build
+  publishPath: ./build
   routes:
-    - src: /.*  # Match all routes
-      dest: /index.html  # Serve index.html
+    - source: /.*
+      destination: /index.html
+      status: 200
