--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv-keywords": "^3.5.2",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
+    "emailjs-com": "^3.2.0",
     "pdfjs-dist": "^3.0.279",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
