--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "golgotha_ministries",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
@@ -14,13 +14,15 @@
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "emailjs-com": "^3.2.0",
-    "pdfjs-dist": "^3.0.279",
+    "pdfjs-dist": "^2.10.377",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-pdf": "^9.1.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "slick-carousel": "^1.8.1",
@@ -34,8 +36,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -49,8 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
