--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
+
+  "engines": {
+  "node": "16.20.0",
+  "npm": "7.11.2"
+},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
