--- a/package.json
+++ b/package.json
@@ -5,32 +5,23 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf-viewer/toolbar": "^3.12.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "emailjs-com": "^3.2.0",
-    "pdfjs-dist": "^3.0.279",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "pdfjs-dist": "^2.16.105",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^9.1.1",
-    "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.26.2",
-    "react-scripts": "^5.0.1",
-    "react-slick": "^0.30.2",
-    "react-swipeable": "^7.0.1",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "5.0.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.4"
   },
-  "engines": {
-    "node": "16.20.0",
-    "npm": "7.11.2"
+  "devDependencies": {
+    "babel-loader": "8.1.0",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
