--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-    "start": "npx serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app"
