--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pdfjs-dist": "^2.16.105",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^9.1.1",
@@ -25,12 +26,11 @@
     "worker-loader": "^3.0.8"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
-
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app"
